--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <title>aviasales</title>
 </head>
 <body>
+    <h1 class="visually-hidden">Aviasales</h1>
     <main id="app"></main>
 </body>
 </html>
